--- a/BookRentalPjt/src/main/resources/application.properties
+++ b/BookRentalPjt/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=skylove2424@gmail.com
-spring.mail.password=yofx niaj jfsv pqry
+spring.mail.password=
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
